--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
 		</div>
 	</div>
 	<div class="modal-backdrop none" id="backdrop"></div>
+	<hr/>
+	<footer>
+		Designed and built by <a href="http://ejosh.co/de">Joshua Johanan.</a><br/>
+		Special thanks to <a href="http://twitter.github.com/bootstrap/index.html">Bootstrap.</a>
+	</footer>
 
 <!--<script src='http://dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.1'></script>
 <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>-->
