Fixing the audio issue

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		</table>
 		<div id="map"></div>
 	</div>
-	<audio id="audio" src="08.mp3" loop="true" autobuffer></audio>
+	<audio id="audio" src="08.mp3" preload></audio>
 	<div class="modal none" id="saveModal">
 		<div class="modal-header">
 			<h3>Save or Clear?</h3>
@@ -102,6 +102,6 @@
 <!--<script src='http://dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.1'></script>
 <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>-->
 <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
-<script src="runBrowser.min.js"></script>
+<script src="runBrowser.js"></script>
 </body>
 </html>
