--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
+<!DOCTYPE HTML>
 <html>
 <head>
 	<title>RunBrowser!</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
+	
+	<!--iDevice iCons-->
+	<link rel="apple-touch-icon" href="runbrowser57.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="runbrowser72.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="runbrowser114.png" />
 	
 	<link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
@@ -102,6 +108,7 @@
 
 <!--<script src='http://dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.1'></script>
 <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>-->
+<!--<script src="OpenLayers.js"></script>-->
 <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
 <script src="runBrowser.min.js"></script>
 </body>
