--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 <!--<script src='http://dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.1'></script>
 <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>-->
-<script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+<script src="OpenLayers.js"></script>
 <script src="runBrowser.min.js"></script>
 </body>
 </html>
