--- a/index.html
+++ b/index.html
@@ -108,7 +108,19 @@
 <!--<script src='http://dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.1'></script>
 <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>-->
 <script src="OpenLayers.js"></script>
-
 <script src="runBrowser.min.js"></script>
+<script>
+function init(){
+	var ac = new RunBrowser.appController();
+	ac.addEvents();
+	ac.showHome();
+	//hide the top bar in mobile safari
+	setTimeout(function(){
+    window.scrollTo(0, 0);
+    }, 0);
+}
+
+window.addEventListener( 'DOMContentLoaded', init, false);     
+</script>
 </body>
 </html>
