linked back to github

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 	<hr/>
 	<footer>
 		Designed and built by <a href="http://ejosh.co/de">Joshua Johanan.</a><br/>
-		Special thanks to <a href="http://twitter.github.com/bootstrap/index.html">Bootstrap</a>, <a href="http://openlayers.org/">Open Layers</a>, <a href="http://www.movable-type.co.uk/scripts/latlong.html">Movable Type</a>
+		View source at <a href="https://github.com/johanan/RunBrowser">Github.</a><br/>
+		Special thanks to <a href="http://twitter.github.com/bootstrap/index.html">Bootstrap</a>, <a href="http://openlayers.org/">Open Layers</a>, and <a href="http://www.movable-type.co.uk/scripts/latlong.html">Movable Type</a>
 	</footer>
 
 <!--<script src='http://dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.1'></script>
