Forgot doctype and had to change the css a little

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE  html>
 <html manifest="/cache.manifest">
 <head>
 	<title>RunBrowser!</title>
@@ -12,15 +13,11 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
     <style>
-    	body { min-height:420px; }
+    	body { min-height:420px;}
     	
-    	.none {
-    		display: none;
-    	}
+    	.none { display: none; }
     	
-    	#map{
-    		height: 50%;
-    	}
+    	#map { height: 220px;}
     </style>
 </head>
 <body class="container">
