--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 
 <!--<script src='http://dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=6.1'></script>
 <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>-->
+<script src="zepto.min.js"></script>
 <script src="OpenLayers.js"></script>
 <script src="runBrowser.min.js"></script>
 <script>
