--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE  html>
-<html manifest="/cache.manifest">
+<!--<html manifest="/cache.manifest">-->
+<html>
 <head>
 	<title>RunBrowser!</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,7 +45,7 @@
 		</table>
 	</div>
 	<div id="mapPage" class="none">
-		<table class="table table-striped" id="savedRuns">
+		<table class="table table-striped" id="runInfo">
 		  <tbody >
 		  	<tr>
 		  		<td>Time:</td>
@@ -107,7 +108,7 @@
 <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>-->
 <script src="zepto.min.js"></script>
 <script src="OpenLayers.js"></script>
-<script src="runBrowser.min.js"></script>
+<script src="runBrowser.js"></script>
 <script>
 function init(){
 	var ac = new RunBrowser.appController();
